# brassy

./: .brassy  .cspell.json  .gitignore  .ruff.toml  LICENSE  README.md  build_release_notes.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: build_docs.yaml  check-if-docs-added.yaml  check-release-notes.yaml  doc8.yaml  install.yaml  pydoclint.yaml  pytest.yaml  release.yaml  ruff.yaml  spellcheck-with-cspell.yaml
doc-build/: .buildinfo  cli.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc-build/_modules/: index.html
doc-build/_sources/: cli.rst.txt
doc-source/: Makefile
doc-source/source/: api.rst  cli.rst  conf.py  index.rst
doc-source/source/examples/basic-usage/: footer.txt  new-release-note  new-release-note-header-footer  new-release-note-v1
docs/: .buildinfo  api.html  brassy-in-ci.html  cli.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  using-brassy.html
docs/_modules/: brass.html  index.html  yarn.html
docs/_modules/brassy/: brassy.html
docs/_modules/brassy/actions/: build_release_notes.html  create_note.html  init.html  prune_yaml.html
docs/_modules/brassy/templates/: release_yaml_template.html  settings_template.html
docs/_modules/brassy/utils/: CLI.html  editor_handler.html  file_handler.html  git_handler.html  messages.html  settings_manager.html  yaml_handler.html
docs/_sources/: api.rst.txt  brassy-in-ci.rst.txt  cli.rst.txt  getting-started.rst.txt  index.rst.txt  using-brassy.rst.txt
docs/_sources/examples/basic-usage/: new-release-note.rst.txt
docs/_sources/releases/: 0.0.2.rst.txt  0.0.4.rst.txt  0.5.1.rst.txt  index.rst.txt
docs/doctrees/: api.doctree  cli.doctree  environment.pickle  index.doctree
docs/doctrees/examples/basic-usage/: new-release-note.doctree
docs/examples/basic-usage/: new-release-note.html
docs/html/: api.html  cli.html  index.html  py-modindex.html  searchindex.js
docs/html/_modules/: yarn.html
docs/html/_sources/: cli.rst.txt
docs/html/examples/basic-usage/: new-release-note.html
docs/releases/: 0.0.2.html  0.0.3.html  0.0.4.html  0.2.0.html  0.3.0.html  0.4.0.html  0.5.0.html  0.5.1.html  index.html
reusable-ci/: check-release-notes.yaml
sphinx/: Makefile
sphinx/source/: api.rst  brassy-in-ci.rst  conf.py  getting-started.rst  index.rst  using-brassy.rst
sphinx/source/examples/basic-usage/: footer.txt  header.txt  new-release-note  new-release-note-date  new-release-note-header-footer  new-release-note-v1  pruned.yaml  release-note.yaml  to-prune.yaml
sphinx/source/releases/: 0.0.2.rst  0.0.4.rst  0.3.0.rst  0.5.0.rst  index.rst  latest.rst
sphinx/source/releases/archive-0.0.2/: fix-blank-line-bug.yaml
sphinx/source/releases/archive-0.0.3/: 39-release-v003.yaml  fix-no-build-no-title.yaml
sphinx/source/releases/archive-0.0.4/: 59-brassy-cant-generate-documentation-for-branches-with-a-in-their-name.yaml  add-dev-container.yaml  add-release-note-checking-ci.yaml  issue-documentation.yaml
sphinx/source/releases/archive-0.3.0/: 1-brassy-fails-if-run-on-blank-file.yaml  6-add-date-field.yaml  9-add-default-template-write-path.yaml  add-init.yaml  (+3 more)
src/brass/: brass.py
src/brassy/: CLI.py  __init__.py  brassy.py  build_release_notes.py  file_handler.py  git_handler.py  messages.py  prune_yaml.py  release_yaml_template.py  settings.py  settings_manager.py  settings_template.py  validator.py
src/brassy/actions/: build_release_notes.py  create_note.py  init.py  init_brassy.py  prune_yaml.py
src/brassy/templates/: release_yaml_template.py  settings_template.py
src/brassy/utils/: CLI.py  editor_handler.py  file_handler.py  git_handler.py  messages.py  settings_manager.py  yaml_handler.py
test/: burgers.rst  burgers.yaml  test.py  test.rst
tests/: regen-outputs.sh  test_cli_ux.py  test_generate_section_string.py  test_integ.py
tests/brassy/templates/: test_release_yaml_template.py
tests/brassy/utils/: test_CLI.py  test_file_handler.py  test_settings_manager.py  test_yaml_handler.py
tests/inputs/: barebones.yaml  fully-featured.yaml  mostly-featured.yaml  multi-entry.yaml  real-world.yaml
tests/outputs/: barebones.rst  fully-featured.rst  mostly-featured.rst  multi-entry.rst  pruned.yaml  real-world.rst
yarn/: yarn.py
(+29 files in other folders)
